# WalkingGridGame

./: CMakeLists.txt  README.md  autobuild.sh  makebuild.bat
3rd/: mysql++_3_2_1.rar  tinyxml2.rar
doc/: readme.doc
doc/memleak/: memleak.h  memorystatistics.cpp  memorystatistics.h  operatornewdelete.cpp  operatornewdelete.h
game/: CMakeLists.txt  main.cpp
game/battle/: battleground.cpp  battleground.h  ground.cpp  ground.h
game/configread/: configread.cpp  configread.h  xmldata.cpp  xmldata.h
game/entity/: action.cpp  action.h  attribute.cpp  attribute.h  country.cpp  country.h  gobject.cpp  gobject.h  hero.cpp  hero.h  monster.h  role.cpp  role.h  sprite.cpp  sprite.h
game/msgdispatch/: gamedispatcher.cpp  gamedispatcher.h  logindispatcher.cpp  logindispatcher.h  messagecommand.cpp  messagecommand.h  msgdispatch.cpp  msgdispatch.h
game/net/: client.cpp  client.h  clientmanager.cpp  clientmanager.h
game/public/: app.cpp  app.h
game/scene/: instance.cpp  instance.h  landscene.cpp  landscene.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  zone.cpp  zone.h
game/unittest/: testclient.cpp  testclient.h
gather/: CMakeLists.txt  main.cpp
gather/db/: dbconnection.cpp  dbconnection.h  dbevent.cpp  dbevent.h  dbeventmanager.h
gather/msgdispatch/: msgdispatch.cpp  msgdispatch.h
gather/net/: client.cpp  client.h  clientmanager.h  connector.cpp  connector.h
gather/public/: app.cpp  app.h
libray/: CMakeLists.txt  boostinc.cpp  boostinc.h  boostsrc.cpp  netio.cpp
libray/include/: ringbuffer.cpp  ringbuffer.h
libray/network/: acceptor.cpp  acceptor.h  connector.cpp  connector.h  service.cpp  service.h  socket.cpp  socket.h
libray/src/: dbmysql.cpp  dbmysql.h  eventmanager.cpp  eventmanager.h  file.cpp  memoryleakinfo.cpp  memoryoperatornew.cpp  memorystatistics.cpp  memorystatistics.h  mymath.cpp  mytime.cpp  thread.cpp  tool.cpp  vector2.cpp
protocol/message/: gmsg.pb.cc  gmsg.pb.h  gpid.pb.cc  gpid.pb.h  msginc.h
protocol/src/: gmsg.proto  gpid.proto  服务器端协议编译.bat
public/include/: autostr.h  debug.h  event.h  file.h  macrosdef.h  memoryleak.h  memoryleakinfo.h  memoryoperatornew.h  mymath.h  mytime.h  netio.h  observer.h  thread.h  tool.h  utilityinc.h  vector2.h
public/net/: db.h  debug.h  netio.h
sqldb/: config.sql  gamedb_gather.sql
